--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,19 @@
 @import "tailwindcss";
 
+@theme {
+  --color-primary: #2563EB;
+  --color-secondary: #FBBF24;
+}
 
+:root {
+  --font-outfit: "Outfit, sans-serif";
+  --font-playfair: "Playfair Display, serif";
+}
+
+body {
+  font-family: var(--font-outfit);
+}
+
+.font-playfair {
+  font-family: var(--font-playfair);
+}
